--- a/eShop.Catalog.API/nlog.config
+++ b/eShop.Catalog.API/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="/logs/internal-nlog-AspNetCore.txt">
+      internalLogFile="/tmp/logs/internal-nlog-AspNetCore.txt">
 
     <extensions>
         <add assembly="NLog.Web.AspNetCore"/>
@@ -11,7 +11,7 @@
 
     <targets>
 
-      <target xsi:type="File" name="jsonFile" fileName="/logs/nlog-json-nested-${shortdate}.log">
+      <target xsi:type="File" name="jsonFile" fileName="/tmp/logs/nlog-json-nested-${shortdate}.log">
         <layout xsi:type="JsonLayout">
           <attribute name="time" layout="${longdate}" />
           <attribute name="spanId" layout="${activity:property=TraceId:whenEmpty=N/A}" />
@@ -37,10 +37,10 @@
       
       
         <target xsi:type="File" name="allfile" 
-                fileName="./logs/nlog-catalog-all-${shortdate}.log"
+                fileName="/tmp/logs/nlog-catalog-all-${shortdate}.log"
                 layout="${longdate}|${scope-property:CorrelationId:whenEmpty=N/A}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
         <target xsi:type="File" name="ownFile-web" 
-                fileName="./logs/nlog-catalog-own-${shortdate}.log"
+                fileName="/tmp/logs/nlog-catalog-own-${shortdate}.log"
                 layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
         <target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
     </targets>
@@ -53,11 +53,12 @@
     </rules>
     
     <rules>
-        <logger name="*" minlevel="Trace" writeTo="allfile" />
-        <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web" final="true" />
+        <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" 
+                writeTo="lifetimeConsole, ownFile-web" final="true" />
         <logger name="Microsoft.*" maxlevel="Info" final="true" />
         <logger name="System.Net.Http.*" maxlevel="Info" final="true" />
         <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
+        <logger name="*" minlevel="Trace" writeTo="allfile" />
       
         <logger name="*" minlevel="Trace" writeTo="jsonFile" />
     </rules>
