--- a/eShop.Catalog.Infrastructure/eShop.Catalog.Infrastructure.csproj
+++ b/eShop.Catalog.Infrastructure/eShop.Catalog.Infrastructure.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\eShop.Catalog.Application\eShop.Catalog.Application.csproj" />
     <ProjectReference Include="..\eShop.Catalog.Domain\eShop.Catalog.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Ilse.Repository" Version="1.0.9" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
