add basket featrures

--- a/eShop.Catalog.API/appsettings.Development.json
+++ b/eShop.Catalog.API/appsettings.Development.json
@@ -6,16 +6,6 @@
     }
   },
   "Authentication": {
-    "Schemes": {
-      "Bearer": {
-        "ValidAudiences": [
-          "http://localhost:57677",
-          "https://localhost:44359",
-          "http://localhost:5136",
-          "https://localhost:7258"
-        ],
-        "ValidIssuer": "dotnet-user-jwts"
-      }
-    }
+    "Schemes": {}
   }
 }
