add redis repository for baskets

--- a/eShop.Catalog.API/appsettings.json
+++ b/eShop.Catalog.API/appsettings.json
@@ -26,7 +26,8 @@
   },
   "ConnectionStrings": {
     "Default": "Host=localhost;Database=Catalog;Username=pad;Password=P2ssw0rd",
-    "ExtIBLU": "Host=localhost;Database=ExtIBLU_Catalog;Username=pad;Password=P2ssw0rd"
+    "ExtIBLU": "Host=localhost;Database=ExtIBLU_Catalog;Username=pad;Password=P2ssw0rd",
+    "Redis": "localhost:6379"
   },
   "UseDeveloperExceptionPage": false,
   "AllowedHosts": "*"
