--- a/eShop.Catalog.Infrastructure/eShop.Catalog.Infrastructure.csproj
+++ b/eShop.Catalog.Infrastructure/eShop.Catalog.Infrastructure.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Ilse.Repository" Version="1.0.9" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="NRedisStack" Version="0.10.1" />
   </ItemGroup>
 
   <PropertyGroup>
