--- a/eShop.Catalog.API/nlog.config
+++ b/eShop.Catalog.API/nlog.config
@@ -11,7 +11,8 @@
 
     <targets>
 
-      <target xsi:type="File" name="jsonFile" fileName="/tmp/logs/nlog-json-nested-${shortdate}.log">
+      <target xsi:type="File" name="jsonFile" 
+              fileName="/tmp/logs/nlog-json-nested-${shortdate}.log">
         <layout xsi:type="JsonLayout">
           <attribute name="time" layout="${longdate}" />
           <attribute name="spanId" layout="${activity:property=TraceId:whenEmpty=N/A}" />
@@ -60,6 +61,6 @@
         <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
         <logger name="*" minlevel="Trace" writeTo="allfile" />
       
-        <logger name="*" minlevel="Trace" writeTo="jsonFile" />
+        <logger name="*" level="Trace" writeTo="jsonFile" />
     </rules>
 </nlog>
