--- a/eShop.Catalog.API/appsettings.Development.json
+++ b/eShop.Catalog.API/appsettings.Development.json
@@ -6,6 +6,31 @@
     }
   },
   "Authentication": {
-    "Schemes": {}
-  }
+    "DefaultScheme": "Bearer",
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:57677",
+          "https://localhost:44359",
+          "http://localhost:5136",
+          "https://localhost:7258"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      },
+      "LocalAuthIssuer": {
+        "ValidAudiences": [
+          "https://localhost:7259",
+          "http://localhost:5259"
+        ],
+        "ValidIssuer": "local-auth"
+      }
+    }
+  },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Database=Catalog;Username=postgres;Password=postgres",
+    "ExtIBLU": "Host=localhost;Database=ExtIBLU_Catalog;Username=postgres;Password=postgres",
+    "Redis": "localhost:6379"
+  },
+  "UseDeveloperExceptionPage": false,
+  "AllowedHosts": "*"
 }
