--- a/eShop.Catalog.API/eShop.Catalog.API.csproj
+++ b/eShop.Catalog.API/eShop.Catalog.API.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
     <UserSecretsId>08d5b24b-70d1-42a3-b0f2-8ebd5f55d39c</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
