--- a/eShop.Catalog.API/appsettings.json
+++ b/eShop.Catalog.API/appsettings.json
@@ -10,8 +10,10 @@
     "Schemes": {
       "Bearer": {
         "ValidAudiences": [
-          "https://localhost:7259",
-          "http://localhost:5259"
+          "http://localhost:57677",
+          "https://localhost:44359",
+          "http://localhost:5136",
+          "https://localhost:7258"
         ],
         "ValidIssuer": "dotnet-user-jwts"
       },
@@ -25,9 +27,9 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=Catalog;Username=pad;Password=P2ssw0rd",
-    "ExtIBLU": "Host=localhost;Database=ExtIBLU_Catalog;Username=pad;Password=P2ssw0rd",
-    "Redis": "localhost:6379"
+    "Default": "Host=eshop.postgres;Database=Catalog;Username=postgres;Password=postgres",
+    "ExtIBLU": "Host=localhost;Database=ExtIBLU_Catalog;Username=postgres;Password=postgres",
+    "Redis": "eshop.redis:6379"
   },
   "UseDeveloperExceptionPage": false,
   "AllowedHosts": "*"
