ammend connection string

--- a/eShop.Catalog.API/appsettings.json
+++ b/eShop.Catalog.API/appsettings.json
@@ -27,7 +27,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=eshop.postgres;Database=Catalog;Username=postgres;Password=postgres",
+    "Default": "Host=localhost;Database=Catalog;Username=postgres;Password=postgres",
     "ExtIBLU": "Host=localhost;Database=ExtIBLU_Catalog;Username=postgres;Password=postgres",
     "Redis": "eshop.redis:6379"
   },
