--- a/eShop.Catalog.Domain/eShop.Catalog.Domain.csproj
+++ b/eShop.Catalog.Domain/eShop.Catalog.Domain.csproj
@@ -23,4 +23,8 @@
     <Folder Include="Orders\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.Common\eShop.Common.csproj" />
+  </ItemGroup>
+
 </Project>
