add some code to order domain

--- a/eShop.Orders.Domain/eShop.Orders.Domain.csproj
+++ b/eShop.Orders.Domain/eShop.Orders.Domain.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Ilse.Cqrs" Version="1.0.1" />
+      <PackageReference Include="Ilse.Repository" Version="1.1.0" />
+    </ItemGroup>
+
 </Project>
