--- a/eShop.Catalog.API/eShop.Catalog.API.csproj
+++ b/eShop.Catalog.API/eShop.Catalog.API.csproj
@@ -31,4 +31,10 @@
     <ProjectReference Include="..\eShop.Catalog.Infrastructure\eShop.Catalog.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
+  </ItemGroup>
+
 </Project>
